--- a/manual/theory/moo.tex
+++ b/manual/theory/moo.tex
@@ -1,17 +1,19 @@
-\subsection{Semiempirical methods}
+\subsection{ZINDO-based transfer integrals using MOO }
 \label{sec:izindo}
 
 \newcommand{\moo}{MOO\xspace}
 \index{electronic coupling!ZINDO}
 
-An approximate method based on Zerner's Independent Neglect of Differential Overlap (ZINDO) has been described in Ref.~\cite{kirkpatrick_approximate_2008}. This semiempirical method is substantially faster than first-principles approaches, since it avoids the self-consistent calculations on each individual monomer and dimer. This allows to construct the matrix elements of the ZINDO Hamiltonian of the dimer from the weighted overlap of molecular orbitals of the two monomers. Together with the introduction of rigid segments, only a single self-consistent calculation on one isolated conjugated segment is required. All relevant molecular overlaps can then be constructed from the obtained molecular orbitals.
+An approximate method based on Zerner's Intermediate Neglect of Differential Overlap (ZINDO) has been described in Ref.~\cite{kirkpatrick_approximate_2008}. This semiempirical method is substantially faster than first-principles approaches, since it avoids the self-consistent calculations on each individual monomer and dimer. This allows to construct the matrix elements of the ZINDO Hamiltonian of the dimer from the weighted overlap of molecular orbitals of the two monomers. Together with the introduction of rigid segments, only a single self-consistent calculation on one isolated conjugated segment is required. All relevant molecular overlaps can then be constructed from the obtained molecular orbitals.
 
 The main advantage of the molecular orbital overlap (\moo) library is {\em fast} evaluation of electronic coupling elements. Note that \moo is based on the ZINDO Hamiltonian which has limited applicability. The general advice is to first compare the accuracy of the \moo method to the DFT-based calculations. 
 
-\moo can be used both in a \slink{moo_standalone}{sandalone mode} and as an \calc{izindo} \calculator of the \votcactp. 
+\moo can be used both in a \slink{moo_standalone}{standalone mode} and as an \calc{izindo} \calculator of \votcactp. 
 
 Since \moo constructs the Fock operator of a dimer from the  molecular orbitals of monomers by translating and rotating the orbitals of \slink{segments}{rigid fragments}, the optimized geometry of all \slink{segments}{conjugated segments} and the coefficients of the molecular orbitals are required as its input in addition to the state file (\sqlstate) with the \slink{neighborlist}{neighbor list}. Coordinates are stored in \xyz files with four columns, first being the atom type and the next three atom coordinates. This is a standard \texttt{xyz} format without a header. Note that the atom order in the \xyz files can be different from that of the mapping files. The correspondence between the two is established in the \xmlsegments file.
 
-The transfer integrals are saved to the \sqlstate file:
-
-{\noindent \small \ctprun \opt \xmloptions  \sql  \sqlstate \exe  \calc{izindo} }
+The calculated transfer integrals are immediately saved to the \sqlstate file.
+\begin{bclogo}[couleur=bgblue, arrondi =0 , logo=\bcinfo, barre=line,noborder=true]{\small Transfer integrals from \calc{izindo}}
+\itshape {\small \ctprun \opt \xmloptions \sql \sqlstate \exe \calc{izindo} }
+\end{bclogo}
+%{\noindent \small \ctprun \opt \xmloptions  \sql  \sqlstate \exe  \calc{izindo} }
