--- a/manual/reference/reference.tex
+++ b/manual/reference/reference.tex
@@ -1,7 +1,8 @@
 \chapter{Reference}
-
+\label{sec:reference}
 \section{Programs}
 \label{ref:programs}
+\label{sec:programs}
 Programs execute specific tasks (calculators). 
 
 \input{reference/programs/all}
