--- a/manual/theory/fragments.tex
+++ b/manual/theory/fragments.tex
@@ -18,9 +18,7 @@ In the case of a conjugated polymer, one molecule can consist of several conjuga
 After partitioning, an additional step is often required to remove bond length fluctuations introduced by molecular dynamics simulations, since they are already integrated out in the derivation of the rate expression. This is achieved by substituting respective molecular fragments with  rigid, planar $\pi$-systems\index{rigid fragment} optimized using first-principles methods. Centers of mass and gyration tensors are used to align rigid fragments, though a custom definition of local axes is also possible. Such a procedure also minimizes discrepancies between the force-field and first-principles-based ground state geometries of conjugated segments, which might be important for calculations of electronic couplings, reorganization energies, and intramolecular driving forces. 
 
 To partition the system on hopping sites and substitute rigid fragments with the corresponding ground-state geometries \ctpmap program is used
-\vskip 0.1cm
-{\noindent \small \ctpmap \tpl \topology \trj \trajectory \seg \xmlcsg  \sql \sqlstate}
-\vskip 0.1cm
+\votcacommand{Mapping the \gromacs trajectory}{\cmdmap}
 It reads in the \gromacs topology (\topology) and trajectory (\trajectory) files, definitions ofconjugated segments and rigid fragments (\xmlcsg) and outputs coordinates of conjugated segments (hopping sites) and rigid fragments (as provided in the MD trajectory and after rigidification) to the  state file (\sqlstate). After this step, all information (frame number, dimensions of the simulation box, etc) are stored in the \slink{statefile}{state file} and only this file is used for further calculations.  
 
 In order to check the mapping one can use the \calc{tdump} \calculator
@@ -29,3 +27,7 @@ In order to check the mapping one can use the \calc{tdump} \calculator
 {\noindent \small \ctprun \sql \sqlstate \opt \xmloptions \exe \calc{tdump} }
 \vskip 0.1cm
 It reads in the state file created by \ctpmap and outputs two trajectory files corresponding to the original and rigidified atom coordinates. To check the mapping, it is useful to superimpose the three outputs (original atomistic, atomistic stored in the state file, and rigidified according to ground state geometries).
+
+
+
+
