--- a/manual/theory/correlations.tex
+++ b/manual/theory/correlations.tex
@@ -16,6 +16,5 @@ where $\langle E\rangle$ is the average site energy. $C(r_{ij})$ is zero if $E_i
 For systems with spatial correlations, variations in site energy differences, $\Delta E_{ij}$, of pairs of molecules from the neighbor list are smaller than variations in site energies, $E_i$, of all individual molecules. Since only neighbor list pairs affect transport, the distribution of $\Delta E_{ij}$ rather than that of individual site energies, $E_i$, should be used to characterize energetic disorder.
 
 Note that the \calc{eanalyze} calculator takes into account {\em all} contributions to the site energies 
-\vskip 0.2cm
-{\noindent \small \ctprun \opt \xmloptions \sql  \sqlstate \exe \calc{eanalyze} }
+\votcacommand{Analyze distribution and correlations of site energeies}{\cmdeana}
 
