--- a/manual/theory/dipro.tex
+++ b/manual/theory/dipro.tex
@@ -1,6 +1,6 @@
 \subsection{Projection of monomer orbitals on dimer orbitals (DIPRO)}
 \label{sec:dipro}
-An approach for the determination of the transfer integral that can be used for any single-particle electronic structure method (Hartree-Fock, DFT, or semiempirical methods) is based on the projection of monomer orbitals on a manifold of explicitly calculated dimer orbitals. This dimer projection (DIPRO) technique including an assessment of computational parameters such as the basis set, exchange-correlation functionals, and convergence criteria is presented in detail in Ref.~\cite{baumeier_density-functional_2010}. A brief summary of the concept is given below.
+An approach for the determination of the transfer integral that can be used for any single-particle electronic structure method (Hartree-Fock, DFT, or semiempirical methods) is based on the projection of monomer orbitals on a manifold of explicitly calculated dimer orbitals. This dimer projection (DIPRO) technique including an assessment of computational parameters such as the basis set, exchange-correlation functionals, and convergence criteria is presented in detail in ref.~\cite{baumeier_density-functional_2010}. A brief summary of the concept is given below.
 
 We start from an effective Hamiltonian~\footnote{we use following notations: $a$ - number, $\vctr{a}$ - vector, $\matr{A}$ - matrix, $\oper{A}$ - operator}
 %
