--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -117,7 +117,7 @@ pdfpagemode=UseNone]{hyperref}
   mathescape=false
 }
 
-
+\setlength\parindent{0pt}
 \frontmatter
 \include{titlepage}
 \thispagestyle{empty}
